<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <string name="menutitle_addTask">Add Task</string>
    <string name="menumain_showDurations">Durations Report</string>
    <string name="menumain_settings">Settings</string>
    <string name="menumain_showAbout">About TaskTimer</string>
    <string name="menumain_generate">Generate Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_task_message">No Task Selected</string>
    <string name="edit_button_description">Button to edit task detail</string>
    <string name="delete_button_description">Button to delete task</string>
    <string name="addedit_name_hint">Task Name: Required</string>
    <string name="addedit_description_hint">Task Description (optional)</string>
    <string name="addedit_sort_hint">Orders: sort low to high</string>
    <string name="addedit_save_text">Save</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks.  Tasks with lower sort order will be placed higher up the list. Tasks with the same sort order will be sorted alphabetically. Tapping a task will start the timer for that task (and will stop the timer for any previous task that was timed.  Each task has an edit and delete buttons if you want to change the details or remove the task.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deleting_message">Deleting will also delete all timing data associated with task id %1$d: %2$s.</string>
    <string name="cancelEditDiag_message">You have unsaved changes, do you want to abandon changes or continue editing.</string>
    <string name="cancelEditDiag_positive_caption">Continue editing</string>
    <string name="cancelEditDiag_negative_caption">Abandon changes</string>
    <string name="about_copyright">Copyright \u00a9 2019 Dcodestar</string>
    <string name="about_weblink">Instructions availabe at www.developers.android.com</string>
    <string name="about_email">For support email divyanshg10@yahoo.com</string>
    <string name="about_credits">Icons derived from <b>analog clock</b> at openclickart.org by <b>Anonymous</b></string>
</resources>
